Bug 157796 -- adding referrer URL when plugin requests the data object, r=serge, sr=darin